# dyon_asteroids

./: Cargo.toml  README.md
assets/: spaceship.blend  spaceship.mtl
assets/shaders/: 150_core.glslf  150_core.glslv
src/: assets.dyon  bullets.dyon  comets.dyon  explosions.dyon  game.dyon  input.dyon  lib.dyon  main.dyon  main.rs  space.dyon  spaceship.dyon
src/engine/: math.rs  mod.rs  obj.rs  shader.rs  sound.rs
src/std/: math.dyon  math2.dyon  math3.dyon  render.dyon  utils.dyon
