[package]
name = "dyon_asteroids"
version = "0.1.0"
authors = ["Sven Nilsen <bvssvni@gmail.com>"]
exclude = ["/images/"]

[dependencies.piston-dyon_interactive]
git = "https://github.com/PistonDevelopers/dyon/"
# path = "../dyon/interactive"

[dependencies.dyon]
git = "https://github.com/PistonDevelopers/dyon/"
# path = "../dyon"

[dependencies]
piston2d-glium_graphics = "0.25.0"
glium = "0.14.0"
piston = "0.22.0"
current = "0.1.1"
pistoncore-glfw_window = "0.22.0"
wavefront_obj = "3.0.0"
vecmath = "0.2.0"
